--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=OutputManeger
+# DB\u63a5\u7d9a\u60c5\u5831
+spring.datasource.url=jdbc:mysql://localhost:3306/outputmaster?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis
+mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.outputmaster.domain
+
+# SQL\u30ed\u30b0\u51fa\u529b\uff08\u958b\u767a\u6642\u306e\u307ftrue\u63a8\u5968\uff09
+spring.jpa.show-sql=true
+
+# \u30bb\u30c3\u30b7\u30e7\u30f3\u7ba1\u7406\uff08JSESSIONID\u5bfe\u7b56\uff09
+server.servlet.session.tracking-modes=cookie
+
+# \u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\uff08\u753b\u50cf\u6a5f\u80fd\u5bfe\u5fdc\u7528/\u5fc5\u8981\u306a\u5834\u5408\uff09
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
