--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=OutputManeger
 # DB\u63a5\u7d9a\u60c5\u5831
-spring.datasource.url=jdbc:mysql://localhost:3306/outputmaster?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/outputsdb?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
