outputmasterからoutputmanegerに修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MyBatis
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.example.outputmaster.domain
+mybatis.type-aliases-package=com.example.outputmaneger.domain
 
 # SQL\u30ed\u30b0\u51fa\u529b\uff08\u958b\u767a\u6642\u306e\u307ftrue\u63a8\u5968\uff09
 spring.jpa.show-sql=true
