--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=OutputManeger
+spring.application.name=OutputManager
 # DB\u63a5\u7d9a\u60c5\u5831
 spring.datasource.url=jdbc:mysql://localhost:3306/outputsdb?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
 spring.datasource.username=root
@@ -8,10 +8,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MyBatis
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.example.outputmaneger.domain
+mybatis.type-aliases-package=com.example.outputmanager.domain
 
-# SQL\u30ed\u30b0\u51fa\u529b\uff08\u958b\u767a\u6642\u306e\u307ftrue\u63a8\u5968\uff09
-spring.jpa.show-sql=true
+# \u2705 \u30b3\u30f3\u30bd\u30fc\u30eb\u306bMyBatis\u306eSQL\u3092\u305d\u306e\u307e\u307e\u51fa\u3059
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # \u30bb\u30c3\u30b7\u30e7\u30f3\u7ba1\u7406\uff08JSESSIONID\u5bfe\u7b56\uff09
 server.servlet.session.tracking-modes=cookie
