新規リポジトリへの初期コミット

--- a/src/main/resources/application-tryout.properties
+++ b/src/main/resources/application-tryout.properties
@@ -1,18 +1,9 @@
-spring.application.name=OutputManager
-
-# DB
+server.port=8089
 spring.datasource.url=jdbc:mysql://localhost:3306/outputsdb_try?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# MyBatis
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.outputmanager.domain
-
-# Thymeleaf
-spring.thymeleaf.cache=false
-
-# SQL logging (MyBatis側でDEBUG推奨。JPA未使用のためこの行は任意)
-# logging.level.com.example.outputmanager=DEBUG
