--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,3 +1,13 @@
+# === 1) 汎用（各アノテーションのデフォルト）===
 NotBlank=必須項目です
 Email=メールアドレスの形式が正しくありません
 Size=入力の長さが制限を超えています
+Pattern=形式が正しくありません
+
+# === 2) 項目ごとの専用（あればこちらが優先）===
+user.name.notblank=お名前を入力してください
+user.email.notblank=メールアドレスを入力してください
+user.email.format=メールアドレスの形式が正しくありません
+user.password.length=パスワードは{min}文字以上で入力してください
+user.passwordConfirm.mismatch=パスワードが一致しません
+user.icon.url=アイコンURLは http(s):// から始まるURLを入力してください
