今日はここまで

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.thymeleaf.cache=false
 
 # SQL logging (MyBatis側でDEBUG推奨。JPA未使用のためこの行は任意)
 # logging.level.com.example.outputmanager=DEBUG
+logging.level.org.mybatis=DEBUG
