--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ mybatis.type-aliases-package=com.example.outputmanager.domain
 # Thymeleaf
 spring.thymeleaf.cache=false
 
-# SQL logging (MyBatis側でDEBUG推奨。JPA未使用のためこの行は任意)
+# SQL logging (MyBatis\u5074\u3067DEBUG\u63a8\u5968\u3002JPA\u672a\u4f7f\u7528\u306e\u305f\u3081\u3053\u306e\u884c\u306f\u4efb\u610f)
 # logging.level.com.example.outputmanager=DEBUG
 logging.level.org.mybatis=DEBUG
+server.port=8089
