--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,29 @@
 spring.application.name=OutputManager
 
-# DB
+# === DB ===
 spring.datasource.url=jdbc:mysql://localhost:3306/outputsdb_try?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# MyBatis
+# === MyBatis ===
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.outputmanager.domain
 
-# Thymeleaf
+# === Thymeleaf ===
 spring.thymeleaf.cache=false
 
-# SQL logging (MyBatis\u5074\u3067DEBUG\u63a8\u5968\u3002JPA\u672a\u4f7f\u7528\u306e\u305f\u3081\u3053\u306e\u884c\u306f\u4efb\u610f)
-# logging.level.com.example.outputmanager=DEBUG
+# === Logging ===
+#logging.level.com.example.outputmanager=DEBUG
 logging.level.org.mybatis=DEBUG
+
+# === Server ===
 server.port=8089
+
+# === Uploads (\u753b\u50cf\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9) ===
+# \u7269\u7406\u4fdd\u5b58\u5148\uff08dev: \u76f8\u5bfe\u30d1\u30b9\u3001prod: \u74b0\u5883\u3067\u4e0a\u66f8\u304d\u53ef\u80fd\uff09
+app.upload.dir=./uploads/images
+# \u6700\u5927\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u30b5\u30a4\u30ba\uff08\u753b\u50cf 3MB \u60f3\u5b9a\uff09
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=3MB
