--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# === App ===
 spring.application.name=OutputManager
 
 # === DB ===
@@ -21,9 +22,9 @@ logging.level.org.mybatis=DEBUG
 # === Server ===
 server.port=8089
 
-# === Uploads (\u753b\u50cf\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9) ===
-# \u7269\u7406\u4fdd\u5b58\u5148\uff08dev: \u76f8\u5bfe\u30d1\u30b9\u3001prod: \u74b0\u5883\u3067\u4e0a\u66f8\u304d\u53ef\u80fd\uff09
+# === Uploads (画像アップロード) ===
+# 物理保存先（dev: 相対パス、prod: 環境で上書き推奨）
 app.upload.dir=./uploads/images
-# \u6700\u5927\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u30b5\u30a4\u30ba\uff08\u753b\u50cf 3MB \u60f3\u5b9a\uff09
+# 最大アップロードサイズ（画像 3MB 想定）
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=3MB
