--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -11,3 +11,11 @@ user.email.format=メールアドレスの形式が正しくありません
 user.password.length=パスワードは{min}文字以上で入力してください
 user.passwordConfirm.mismatch=パスワードが一致しません
 user.icon.url=アイコンURLは http(s):// から始まるURLを入力してください
+
+# === 3) Output関連 ===
+output.media.exclusive=画像と動画は同時に登録できません
+output.image.max=画像サイズは3MB以内にしてください
+output.image.ext=画像は jpg/jpeg/png/webp のみアップロードできます
+
+# === 4) ログイン関連（任意）===
+login.failed=ユーザー名またはパスワードが正しくありません
